public/css/partials/_all-locations.scss
/* 
** All Locations Landing Page
*/

.container__all-locations {

	/** Search Area **/
	.search-locations {

		.search-box-label {
			text-align: center;

			@include breakpoint($min, $post-palm) {
				text-align: left;
			}
		}

		.search-box-area {
			position: relative;
			height: 45px;
			display: block;

			@include breakpoint($min, $post-palm) {
				width: 80%;
				display: inline-block;
			}

			// Search Input Field
			.search-box {
				height: 45px;
				padding: 0 30px;
			}

			// Search magnyfing glass icon
			.icon-search {
				position: absolute;
				left: 0px;
				top: 12px;
				font-size: 20px;
				color: #c5c2bb;
			}

			// Clear Search icon
			#clear-search {
				position: absolute;
				right: 0px;
				top: 12px;
				font-size: 20px;
				color: #c5c2bb;

				&:hover {
					cursor: pointer;
				}
			}
		}

		.search-button-area {
			height: 60px;

			@include breakpoint($min, $post-palm) {
				height: auto;
				display: inline-block;
				width: 19.5%;
				vertical-align: 1px;
				margin-left: -2.61px;
			}

			// Button for Location Search
			#find-location {
				margin: 15px auto 0;
				position: absolute;
				left: 0;
				right: 0;
				width: 45%;
				height: 45px;

				@include breakpoint($min, $post-palm) {
					position: relative;
					left: inherit;
					right: inherit;
					width: 99%;
					margin: 0;
					border-radius: 0;
				}

				@include breakpoint($min, $pre-laptop) {
					width: 80%
				}
			}
		}
	}

	/** Filters Section **/
	.search-filters {
		margin: 1em 0 0;
		text-align: center;

		@include breakpoint($min, $post-palm) {
			text-align: left;
			margin: 1em 0;
		}

		.filters__current {
			margin: 0;

			@include breakpoint($min, $post-palm) {
				display: inline-block;
			}

			p {
				margin: 0;
				max-width: none;

				.current-location-container {
					display: block; 

					@include breakpoint($min, $post-palm) {
						display: inline;
					}
				}
			}
		}

		.filters__research {

			@include breakpoint($min, $post-palm) {
				display: inline-block;
			}

			p {
				text-align: center;
				margin: 0;
				max-width: none;

				@include breakpoint($min, $post-palm) {
					text-align: left;
				}

				.only-research-container {
					display: block; 

					@include breakpoint($min, $post-palm) {
						display: inline;
					}
				}
			}
		}
	}

	// Search/Error results container
	.search__results {

		#results, #search-error, #distance-error {
			margin-top: 15px;
			margin-bottom: 20px;
			padding: 6px;
			border-radius: 2px;
			font-size: 13.5px;

			@include breakpoint($min, $mobile-phone) {
				font-size: inherit;
			}
			@include breakpoint($min, $post-palm) {
				margin-top: 0px;
			}

		}

		#results {
			background-color: rgba(0,144,196,0.15);
		}
	}

	.views-tab-controls {
		display: none;
		border-bottom: 2px solid #eee;

		@include breakpoint($min, $post-palm) {
			display: block;
		}

		div {
			display: inline-block;
			padding: 10px;
			background-color: #0090c4;
			color: #ffffff;
			opacity: .65;
			margin-bottom: -1px;

			&.list-view-btn {
				margin-right: 5px;
			}
			&.active {
				opacity: 1;
			}

			&:hover {
				cursor: pointer;
			}
		}

	}

	/** Locations List View (no-map) **/
	.locations-results-list {
		margin-top: 0px;
		@include breakpoint($min, $post-palm) {
			margin-top: 10px;
		}

		table.locations-list-view {
			display: block;
			width: 100%; 
			border-collapse: collapse;

			@include breakpoint($min, $post-palm) {
				display: table;
			}

			thead {
				display: block;

				@include breakpoint($min, $post-palm) {
					display: table-header-group;
				}

				tr {
					display: block;
					position: absolute;
					top: -9999px;
					left: -9999px;

					@include breakpoint($min, $post-palm) {
						display: table-row;
						position: relative;
						top: inherit;
						left: inherit;
					}

					th {
						display: block;
						background: #eee;

						@include breakpoint($min, $post-palm) {
							display: table-cell;
						}
					}
				}
			}

			tbody {
				display: block;

				@include breakpoint($min, $post-palm) {
					display: table-row-group;
				}

				tr {
					display: block;
					border: 1px solid #eee;

					@include breakpoint($min, $post-palm) {
						display: table-row;
						border-bottom: 1px solid #eee;
					}

					td {
						border: none;
						position: relative;
						padding-left: 30%;
						display: block;
						font-size: 13.5px;

						@include breakpoint($min, $mobile-phone) {
							font-size: inherit;
						}

						@include breakpoint($min, $post-palm) {
							display: table-cell;
							padding-left: 12px;
						}

						&:before {
							font-weight: bold;
							position: absolute;
							top: 37.5%;
							left: 6px;
							width: 45%;
							padding-right: 10px;
							white-space: nowrap;

							@include breakpoint($min, $post-palm) {
								position: relative;
								top: inherit;
								left: inherit;
								width: auto;
								padding-left: initial;
								white-space: nowrap;
							}
						}

						&:nth-of-type(1):before {
							@include breakpoint($max, $post-palm) {
								content: "Location";
							}
						}

						&:nth-of-type(2):before {
							@include breakpoint($max, $post-palm) {
								content: "";
							}
						}

						&:nth-of-type(3):before {
							@include breakpoint($max, $post-palm) {
								content: "Today's Hours";
							}
						}

					}
				}
			}

			td {

				&.location-info {

					.p-org {
						font-weight: bold;
					}

					.map-link, .directions-link {
						display: block; 

						@include breakpoint($min, $tablet) {
							display: inline;
						}

					}
				}

				&.services-info {
					ul {
						margin: 0 0 0 1.5em;
						@include breakpoint($min, $post-palm) {
							margin: 0 0 0 .5em;
						}
					}
				}
			}
		}
	}

	/** Locations Map View **/
	.locations-results-map {
		padding-top: 0px;
		margin: -25px 0px 20px 0px;

		@include breakpoint($min, $post-palm) {
			margin: 0px 0px 20px 0px;
			padding-top: 10px;
		}

		.locations-data-wrapper {
			border: 1px solid #eee;
			padding: 7px;
			height: 500px;
			overflow-x: scroll;
			overflow-x: hidden;

			.location-data {
				border-bottom: 1px solid #eee;
				padding: 5px 0px;

				.p-org {
					font-weight: bold;
				}

				.highlighted-services-list {
					margin: .5em 0 .5em 1.25em;
					list-style-type: disc;

					li {
						display: list-item;
					}
				}

				.todays-hours, .distance {
					margin: .35em 0;

					span {
						text-decoration: underline;
						margin-right: .05em;
					}
					strong {
						margin-left: .1em;
					}
				}

				.directions-link {
					margin: .35em 0 .5em;
				}

			}
		}

		// Google Map
		.map-wrapper {
			display: none; // Hide on mobile

			@include breakpoint($min, $post-palm) {
				display: block; // Display on palm devices and up
			}

			#all-locations-map {
				height: 500px;
				width: 100%;
			}

			#all-locations-map-legend {
				padding: 10px;
			  font-size: 13px;
			  font-size: 1.3em;
			  background: #fff;
			}

			.hide-legend {
			  display: none;
			}

			.show-legend {
			  display: block;
			}
			// Fix to display the closing 'X' on marker's infowindow
			img[src*="gstatic.com/"], 
			img[src*="googleapis.com/"] {
				max-width: none;
			}
		}
	}
	
}

